# crab-cademy

./: .gitignore  LICENSE  README.md  debug_playground.js  fix_timeouts.cjs  fix_timeouts.js  generate_files.cjs  generate_tests.cjs  generate_tests.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: release.yml
api/: feedback.ts
playwright-report/: index.html
polars_runner/: Cargo.toml
scripts/: generate-icon.cjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/playground_runner/src/: main.rs
src-tauri/resources/lessons/: ch01-01.toml
src-tauri/src/: execution.rs  lessons.rs  lib.rs  main.rs
src-tauri/tests/: execution_tests.rs  lessons_tests.rs
src/components/editor/: CodeEditor.vue  FileTreeNode.vue  MultiFileEditor.vue
src/composables/: useCodeRunner.ts  useLessonState.ts
src/data/: lessons.ts  types.ts
src/data/lessons/: ch01.ts  ch02.ts  (+8 more)
src/db/: database.ts
src/pages/: HomePage.vue  HowToPage.vue  LandingPage.vue  LearningPathPage.vue  LessonPage.vue
src/router/: index.ts
src/services/: codeRunner.ts  progressStore.ts
tauri_runner/: Cargo.toml
tauri_runner/src/: main.rs
test-results/: .last-run.json
test-results/polars-ch01_04-Polars-Chap-be66e--1-1-Introduction-to-Polars-webkit/: error-context.md
test-results/polars-ch01_04-Polars-Chapters-1-4-1-4-Aggregation-GroupBy--webkit/: error-context.md
tests/: lesson1.spec.ts  reqwest.spec.ts  verify_ch1.rs  verify_ch2.rs
tests/polars/: ch01_04.spec.ts  ch05_07.spec.ts
tests/the-book/: ch01.spec.ts  ch02.spec.ts  ch03.spec.ts  ch04.spec.ts  ch05.spec.ts  ch06.spec.ts  ch07.spec.ts  ch08.spec.ts  ch09.spec.ts  ch10.spec.ts  ch11.spec.ts  ch12.spec.ts  ch13.spec.ts  ch14.spec.ts  ch15.spec.ts  ch16.spec.ts  ch17.spec.ts  ch18.spec.ts  ch19.spec.ts  ch20.spec.ts  ch21.spec.ts
tests/utils/: mockPlayground.ts  mockTauri.ts  persistentTest.ts
tests/web-dev/: ch01.spec.ts  ch02.spec.ts  ch03.spec.ts  ch04.spec.ts  ch05.spec.ts  ch06.spec.ts  ch07.spec.ts  ch08.spec.ts  ch09.spec.ts  ch10.spec.ts  ch11.spec.ts  ch12.spec.ts  ch13.spec.ts  ch14.spec.ts  ch15.spec.ts  ch16.spec.ts  ch17.spec.ts  ch18.spec.ts  ch19.spec.ts
web_dev_runner/: Cargo.toml
web_dev_runner/src/: main.rs
web_dev_runner/src/controllers/: greet.rs
(+60 files in other folders)
