[package]
name = "tauri_runner"
version = "0.1.0"
authors = ["Nicholas Finch"]
license = "MIT"
edition = "2021"

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "random", "strings", "is_in", "zip_with", "round_series", "checked_arithmetic", "csv", "parquet", "json", "ipc", "dtype-datetime", "dtype-struct", "dtype-categorical", "regex", "fmt"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
